# Grimoire

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json
.VSCodeCounter/2026-04-27_21-13-08/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-04-27_21-15-58/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/: copilot-instructions.md
.github/prompts/: commitMessage.prompt.md  summarizeChanges.prompt.md
src/: App.svelte  app.css  main.js
src-tauri/: Cargo.toml  build.rs  cargo_errors.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql  0002_tags_and_links.sql  0003_password_protection.sql  0004_templates.sql  0005_properties.sql  0006_template_properties.sql  0007_template_tracking.sql  0008_fts.sql  0009_fts_rebuild.sql  0010_bookmarks.sql  0011_settings.sql  0012_wikipedia.sql
src-tauri/src/: auth.rs  commands.rs  crypto.rs  db.rs  hardware.rs  lib.rs  main.rs  vector.rs
src-tauri/src/commands/: bookmarks.rs  calendar.rs  chat.rs  hardware.rs  mod.rs  notes.rs  properties.rs  rag.rs  search.rs  settings.rs  tags.rs  templates.rs  wikipedia.rs
src/lib/: ActivityBar.svelte  Calendar.svelte  Chat.svelte  ConfirmModal.svelte  ContextMenu.svelte  Counter.svelte  DatabaseView.svelte  DiffView.svelte  FolderSidebar.svelte  Graph.svelte  ImprovePopover.svelte  Kanban.svelte  LockScreen.svelte  NoteEditor.svelte  NoteList.svelte  NoteProperties.svelte  PasswordModal.svelte  QuickSwitcher.svelte  Search.svelte  Settings.svelte  TabBar.svelte  (+1 more)
(+63 files in other folders)
