[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
lancedb = "0.14"
arrow-array = "53"
arrow-schema = "53"
futures = "0.3"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
sysinfo = "0.33"
zim-sys = "0.1.0"
zim-rs = "0.1.1"
sha2 = "0.10"
roxmltree = "0.20"
scraper = "0.22"
rayon = "1"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }

[patch.crates-io]
# Local forks of zim-sys and zim-rs with the Searcher/Search/Query API removed.
# These classes were dropped in libzim 9.x (search.h no longer exists).
# We don't need full-text search via libzim — LanceDB handles that.
zim-sys = { path = "../vendor/zim-sys" }
zim-rs = { path = "../vendor/zim-rs" }
